# MyAIFactory_ql_v3

./: .gitignore  main_v3.py  pyproject.toml  specforge_provider.py
logs/: run-20260428-224756.txt  run-20260428-224838.txt
output/billing/: invoice-Real-time_team_incid.json
src/core/: config.py  schemas.py
src/specforge_v3/: billing.py  flow.py  flow.py.bak_frontend_patch  main.py  state.py
src/specforge_v3/crews/: loader.py
src/specforge_v3/flows/: pipeline_flow.py  pipeline_flow_v6.py  pipeline_state.py
src/specforge_v3/prompts/: architect.txt  ba.txt  backend_coder.txt  backend_coder.txt.bak  coding_standards.md  frontend_coder.txt  frontend_coder.txt.bak  pm.txt  qa_engineer.txt  researcher.txt  summarizer.txt  tech_writer.txt
src/specforge_v3/tools/: github_tool.py  sanitizer.py  test_runner.py  validation_tool.py
tests/: test_tool.py
