[project]
name = "specforge-v3"
version = "3.0.0"
description = "AI Factory v3: CrewAI-powered multi-agent pipeline"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.0",
    "crewai-tools>=0.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.24.0", "ruff>=0.8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell Hatchling where your code lives
[tool.hatch.build.targets.wheel]
packages = ["src/specforge_v3"]

# Optional: CLI entry point
[project.scripts]
ai-factory = "specforge_v3.main:app"